--- a/_posts/2025-04-13-the-box.md
+++ b/_posts/2025-04-13-the-box.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "The Box Pattern: A Deep Dive into Swift's Hidden Gem"
+title: "The Box Pattern: A Deep Dive into Swift's Strange Feature"
 date: 2025-04-13
 categories: swift programming
 tags: swift parameterpack box pattern generics
