fix: function signature

--- a/_posts/2025-04-13-the-box.md
+++ b/_posts/2025-04-13-the-box.md
@@ -45,7 +45,7 @@ But what are the reasons for this post?
 Well, Swift 5.9 introduced a new feature called Parameter Packs. Parameter Packs are really powerful and useful. And somehow they introduced a new kind of box I like to call the "heterogeneous box." For people who are not familiar with the concept of Parameter Packs, they work like variadic generics. Let's see the example below:
 
 ```swift
-func <each P>packs(argument: repeat each P) -> (repeat each P) {
+func packs<each P>(argument: repeat each P) -> (repeat each P) {
     return (repeat each argument)
 }
 ```
